do some refactor work & handle get orders for specific product